--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/types": "^7.19.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.21",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -23,6 +24,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@babel/generator": "^7.19.0",
     "@babel/parser": "^7.19.1"
   },
   "jest": {
